fix: spacing nav buttons over text

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -44,6 +44,10 @@ header .meta a:hover {
   font-weight: 500;
 }
 
+#header-post #actions ul li {
+  margin-right: 0.2rem;
+}
+
 /* inline code */
 :is(p, ol) code {
   font-size: 0.9em;
